keycloak/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gkeylock.starsys.fr
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: keycloak.starsys.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
  tls:
    - hosts:
        - keycloak.example.com
      secretName: keycloak-tls
